css/style.css
/* ===== global ===== */

html {
  width: 100%;
  height: 100%;
}

body {
  padding: 0px;
  background: #fff;
  font-size: 18px;
  width: 100%;
  height: 100%;
}

body, h1, h2, h3, h4, h5, h6 {
  font-family: 'EB Garamond', serif;
  margin-top: 0;
}

h5 {
  margin-bottom: 0;
}

section {
  padding-top: 90px;
  padding-bottom: 20px;
  position: relative;
  width: 100%;
  min-height: 100%;
  color: #fff;
}

hr {
  margin:20px 0px;
  border-color:rgba(250,250,250, 0.1)
}

blockquote {
  border: none;
  padding: 0;
}

blockquote p {
  font-size: 16px;
}

blockquote p:first-child:first-letter {
  float: left;
  font-size: 76px;
  line-height: 50px;
  padding-top: 4px;
  padding-right: 8px;
  padding-left: 3px;
  color: rgba(255, 255, 255, 0.5);
}

blockquote small {
  color: #fff;
  font-size: 15px;
  font-style: italic;
}

.page-header {
  padding-top:10px;
  border-bottom: none;
}

.page-header h2 {
  font-weight:100;
  font-size:36px;
  line-height:36px;
}

@media (max-width: 991px){
  section {
    padding-top: 70px;
  }
  .page-header {
    padding-top: 0px;
  }
}

@media (max-width: 767px){
  body {
    padding-right: 0px;
    padding-left: 0px;
    font-size: 16px;
  }
  section {
    padding-top: 60px;
  }
  hr {
    margin: 5px 0 10px;
  }
  .page-header {
    padding-top: 0;
    margin-top: 10px;
    margin-bottom: 0;
  }
  .page-header h3 {
    font-weight: 100;
    font-size: 32px;
    line-height: 34px;
  }
  .m-nopad {
    padding: 0;
  }
  .panel {
    padding: 10px !important;
  }
}

.logotype {
  font-family: 'Special Elite', serif;
}

.panel {
  padding: 30px 30px 20px 30px;
  background-color: #597A7F;
  border: none;
}

.panel.buy-sidebar {
  padding: 0 0 5px;
}

.panel-body {
  color: #A4B1CC;
  padding: 10px 0 0;
  font-size: 16px;
}

.panel .list-group {
  font-size: 14px;
}

.panel .list-group-item {
  background-color: transparent;
  border: none;
  padding: 0;
  height: 30px;
}

.panel .list-group-item a {
  color: #fff;
}

/* ===== nav ===== */

.navbar-header {
  padding: 0;
}
.navbar-collapse {
  padding-right: 0;
  padding-left: 0;
}
.navbar-nav li a {
  padding: 30px 12px 30px 12px;
  color: #666;
  font-size: 20px;
  text-transform: lowercase;
  border-top: 10px solid transparent;
}
.navbar-default .navbar-nav li.active a, 
.navbar-default .navbar-nav li.active a:hover, 
.navbar-default .navbar-nav li.active a:focus {
  text-decoration: none;
  background: none;
  border-top: 10px solid #295D66;
}

.navbar-default .navbar-brand {
  width: auto !important;
  white-space: nowrap;
  padding: 30px 0px 30px 0px;
  color: #295D66;
  font-size: 26px;
  font-weight: 100;
  font-family: 'Sacramento', cursive;
  font-size: 36px !important;
  margin-top: 10px;
}

.navbar {
  min-height: 60px;
  padding-right: 20px;
  padding-left: 20px;
  background: rgba(255, 255, 255, .9);
}

@media (max-width: 991px) {
  .navbar-default .navbar-brand {
    padding: 20px 0px;
    margin-left: 5px;
    font-size: 26px !important;
    text-align:left;
  }
  .navbar-default .navbar-nav li a  {
    font-size: 18px;
    padding: 20px 6px 20px 6px;
  }
}

@media (max-width: 767px) {
  .navbar-default .navbar-brand {
    padding: 15px 0px 10px 0;
    margin-left: 0;
    font-size: 30px;
    text-align: left;
  }
  .navbar-default .navbar-nav {
    margin-left: 0;
  }
  .navbar-default .navbar-nav li {
    padding: 5px 0;
  }
  .navbar-default .navbar-nav li a {
    float: none;
    font-size: 24px;
    padding: 5px 0px 5px 15px;
    border: none;
  }
  .navbar-default .navbar-nav li.active a, 
  .navbar-default .navbar-nav li.active a:hover, 
  .navbar-default .navbar-nav li.active a:focus {
    padding-left: 5px;
    text-decoration: none;
    background: none;
    border-top: none;
    border-left: 10px solid #295D66;
  }
}

/* ===== sections ===== */

#home {
  background: #252b35;
}

#home h1 {
  font-size: 48px;
  margin-bottom: 0;
}

#home h2 {
  font-size: 32px;
  margin-top: 0;
  margin-bottom: 60px;
}

#home .page-header {
  padding-top: 30px;
}

.quote-fader {
  position: relative;
  min-height: 193px;
}

.quote-fader li {
  position: absolute;
  top: 0;
  left: 0;
}

#home blockquote p:first-child:first-letter {
  float: left;
  font-size: 48px;
  line-height: 30px;
  padding-top: 4px;
  padding-right: 6px;
  padding-left: 3px;
  color: rgba(255, 255, 255, 0.5);
}

#home blockquote small {
  color: #fff;
  font-size: 13px;
  font-style: italic;
}

@media (max-width: 1199px) {
  #home h1 {
    font-size: 44px;
  }
  #home h2 {
    font-size: 32px;
    margin-bottom: 50px;
  }
  #home {
    min-height: auto;
  }
  #home .lead{
    font-size: 18px;
  }
  .quote-fader {
    min-height: 204px;
  }
}

@media (max-width: 991px) {
  #home h1 {
    font-size: 28px;
  }
  #home h2 {
    font-size: 22px;
    margin-bottom: 40px;
  }
  #home {
    min-height: auto;
  }
  #home .lead{
    font-size: 18px;
  }
  #home blockquote p {
  font-size: 13px;
  }
  #home blockquote p:first-child:first-letter {
    float: left;
    font-size: 32px;
    line-height: 28px;
    padding-top: 4px;
    padding-right: 4px;
    padding-left: 3px;
    color: rgba(255, 255, 255, 0.5);
  }
  #home blockquote small {
    color: #fff;
    font-size: 11px;
    font-style: italic;
  }
  .quote-fader {
    min-height: 175px;
  }
}

@media (max-width: 767px) {
  #home h1 {
    font-size: 26px;
    text-align: center;
    padding-bottom: 0;
    margin-bottom: 0;
  }
  #home h2 {
    font-size: 20px;
    text-align: center;
    padding-top: 0;
    margin-bottom: 10px;
  }
  #home .lead{
    font-size: 16px;
    text-align: center;
  }
  .quote-fader {
    min-height: 120px;
  }
}

#about {
  background-color: #252b35;
  background-image: url(../img/ny-bg6.jpg);
  background-repeat: no-repeat;
  background-position: 30% 0;
  background-attachment: fixed;
}

@media screen and (orientation:portrait), screen and (orientation:landscape) {
  #about {
    background-position: center top;
    background-attachment: inherit;
  }
}

#about h2, #about h3 {
  margin-top: 0;
  margin-bottom: 0;
  color: #333;
}

#about h3 {
  font-size: 1.2em;
}

#about .page-header > .panel > p {
  color: #000;
}

@media (max-width: 767px) {
  #about h2 {
    font-size: 30px;
  }
  #about .page-header > p {
    color: #fff;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
  }
}

#about .panel {
  background-color: rgba(255, 255, 255, .6);
}

#about .panel.buy-sidebar {
  background-color: #733A53;
}

#author {
  background: #295D66;
}

#reviews {
  background: #284073;
}

#news {
  background: #733953;
}

#news .media:first-child {
  margin-top: 15px;
}

#calendar {
  background: #993F2D;
}

.calentry {
  margin-bottom: 20px;
}

#journalism {
  background: #A3B0CC;
  color: #333;
}

#journalism a {
  color: #362966;
}

@media (max-width: 991px) {
  .media:first-child {
    margin-top: 15px;
  }
  #journalism .page-header {
    padding-bottom: 0;
  }
}

@media (max-width: 767px) {
  #contact i.icon-4x {
    font-size: 3em;
  }
  #contact .circ {
    width: 65px;
    height: 65px;
    line-height: 0;
    padding-top: 10px;
  }
}

/* ===== footer ===== */

footer {
  position: relative;
  display: inline-block;
  width: 100%;
  min-width: 100%;
  padding-top: 50px;
  padding-bottom: 50px;
  min-height: 200px;
  background: #252b35;
  color: #fff;
}

footer .circ{
  float: left;
  margin: 10px;


}
footer .circ a{
  color: #fff;
}

footer .circ a:hover{
  text-decoration: none;
}


/* ===== icons ===== */

.circ {
  width: 98px;
  height: 98px;
  margin: 0 auto 10px;
  line-height: 95px;
  text-align: center;
  border: 1px solid rgba(250,250,250,.9);
  border-radius: 50px;
  padding-top: 15px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.ikestrom {
  font-family: "Helvetica Neue", Helvetica, sans-serif;
  font-size: 16px;
}

.ikestrom i {
  font-size: 13px;
}

